# Parking_Tower_with_Giant_Manipulator

./: README.md  car.world  convert.py  map.yaml
Manipulator_study/arduinobot_controller/config/: arduinobot_controllers.yaml
Manipulator_study/arduinobot_cpp_example/: CMakeLists.txt  package.xml
Manipulator_study/arduinobot_cpp_example/src/: simple_service_client.cpp
Manipulator_study/arduinobot_description/launch/: gazebo.launch.py
Manipulator_study/arduinobot_description/meshes/: simplebox_box_v5.stl
Manipulator_study/arduinobot_description/urdf/: arduinobot.urdf copy.xacro  arduinobot.urdf.xacro  arduinobot_ros2_control.xacro
Manipulator_study/arduinobot_moveit/config/: arduinobot.srdf  joint_limits.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml
Manipulator_study/arduinobot_py_example/: setup.py
Manipulator_study/arduinobot_py_example/arduinobot_py_example/: manipulator_manager.py  simple_service_client.py
Manipulator_study/arduinobot_remote/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
multi_turtlebot_nav/: package.xml  setup.cfg  setup.py
multi_turtlebot_nav/multi_turtlebot_nav/: goal_sender.py  turtlebot_state_monitor.py
multitb_ws/install/: local_setup.sh  setup.sh
multitb_ws/log/: latest_build
robot_control_gui/: package.xml  setup.cfg  setup.py
robot_control_gui/maps/: map.pgm  map.yaml
robot_control_gui/robot_control_gui/: monitoring.py  robot_control_gui.py  robot_control_gui2.py  skynet.py  test.py
(+31 files in other folders)
